--- a/modulo3/ex022/fundo006.html
+++ b/modulo3/ex022/fundo006.html
@@ -8,16 +8,24 @@
     <style>
         body{
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center top;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            /*Shrothand - background 
+            color > image > > repeat > [size] > attachment
+            */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,6 +36,10 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, aliquid dicta repellat architecto, explicabo exercitationem quaerat mollitia inventore laborum porro voluptatem aut. Sint accusamus iure sed minus architecto maxime fugit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, consectetur? Quos iusto, quae vero quam mollitia, sapiente laborum quod fugit obcaecati aperiam dolore debitis quasi possimus sequi asperiores. Autem, repudiandae?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, aliquid dicta repellat architecto, explicabo exercitationem quaerat mollitia inventore laborum porro voluptatem aut. Sint accusamus iure sed minus architecto maxime fugit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, consectetur? Quos iusto, quae vero quam mollitia, sapiente laborum quod fugit obcaecati aperiam dolore debitis quasi possimus sequi asperiores. Autem, repudiandae?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, aliquid dicta repellat architecto, explicabo exercitationem quaerat mollitia inventore laborum porro voluptatem aut. Sint accusamus iure sed minus architecto maxime fugit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, consectetur? Quos iusto, quae vero quam mollitia, sapiente laborum quod fugit obcaecati aperiam dolore debitis quasi possimus sequi asperiores. Autem, repudiandae?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, aliquid dicta repellat architecto, explicabo exercitationem quaerat mollitia inventore laborum porro voluptatem aut. Sint accusamus iure sed minus architecto maxime fugit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, consectetur? Quos iusto, quae vero quam mollitia, sapiente laborum quod fugit obcaecati aperiam dolore debitis quasi possimus sequi asperiores. Autem, repudiandae?</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, aliquid dicta repellat architecto, explicabo exercitationem quaerat mollitia inventore laborum porro voluptatem aut. Sint accusamus iure sed minus architecto maxime fugit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, consectetur? Quos iusto, quae vero quam mollitia, sapiente laborum quod fugit obcaecati aperiam dolore debitis quasi possimus sequi asperiores. Autem, repudiandae?</p>
     </main>
 </body>
